--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,21 @@
 {
-  "name": "safaricom",
-  "short_name": "safaricom",
-  "start_url": "/safaricom/",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "/storage/emulated/0/hacker/IMG_20241225_212816.png",  // Hammer and wrench icon
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "/storage/emulated/0/hacker/IMG_20241225_212816.png",  // Cement bag icon
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+    "name": "Safaricom",
+    "short_name": "Safaricom",
+    "description": "Safaricom phone number input app",
+    "start_url": "/",
+    "display": "standalone",
+    "background_color": "#ffffff",
+    "theme_color": "#5da9c9",
+    "icons": [
+        {
+            "src": "icon.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icon.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
